Fix feature img sizes on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ a {
   .desktop-white {
     color: white;
   }
+  .desktop-hidden {
+    display: none;
+  }
 }
 
 @media (max-width: 748px) {
